--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/item_title"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
 
-</TextView>
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:layout_width="match_parent">
+
+<LinearLayout
+
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/item_title"
+        android:padding="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+   <ImageView
+       android:layout_width="match_parent"
+       android:layout_height="194dp"
+       android:id="@+id/item_image"
+       android:importantForAccessibility="no"
+       android:scaleType="centerCrop"/>
+</LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
